# GPTranslate

./: .gitignore  CNAME  LICENSE  README.md  eslint.config.js  generate_icons.ps1  package-lock.json  package.json  svelte.config.js  vite.config.js
.assets/afdesign/: app_logo.afdesign  logo_dark.afdesign  logo_light.afdesign
docs/: CNAME  features.html  getting-started.html  index.html  scripts.js
docs/assets/: logo_light.afdesign
docs/assets/css/: styles.css
docs/assets/images/: logo.afdesign
docs/assets/js/: main.js
img/: logo_dark.afdesign
manifests/scoop/: prepare-scoop.ps1
manifests/winget/p/PhilBerndt/GPTranslate/1.1.0/: prepare-winget.ps1
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  history.rs  lib.rs  main.rs  theme.rs  translation.rs  tray.rs
src/lib/: AppIcon.svelte  History.svelte  Settings.svelte
src/routes/: +page.svelte
