[package]
name = "gptranslate"
version = "1.0.0"
description = "A fast, modern desktop translation application built with Rust and Tauri that provides instant translation between multiple languages with global hotkey support, system tray integration, and a beautiful user interface."
authors = ["Phil Berndt <phil@berndt.no>"]
license = "MIT"
homepage = "https://gptranslate.berndt.no"
repository = "https://github.com/philberndt/gptranslate"
documentation = "https://gptranslate.berndt.no"
keywords = ["translation", "desktop", "tauri", "ai", "clipboard"]
categories = ["gui", "text-processing", "localization"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gptranslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.19", features = ["json"] }
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi"] }
